Added translation template file

--- a/oship/.installed.cfg
+++ b/oship/.installed.cfg
@@ -24,7 +24,7 @@ __buildout_installed__ = /home/tim/projects/ref_impl_python/TRUNK/oship/bin/oshi
 	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/zdaemon
 	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/static-apidoc
 	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/i18nextract
-__buildout_signature__ = zc.recipe.egg-1.0.0-py2.4.egg setuptools-0.6c8-py2.4.egg zc.buildout-1.0.0b31-py2.4.egg
+__buildout_signature__ = zc.recipe.egg-1.0.0-py2.4.egg setuptools-0.6c8-py2.4.egg zc.buildout-1.0.2-py2.4.egg
 _b = /home/tim/projects/ref_impl_python/TRUNK/oship/bin
 _d = /home/tim/projects/ref_impl_python/TRUNK/oship/develop-eggs
 _e = /home/tim/buildout-eggs
@@ -47,9 +47,7 @@ eggs = oship
 	z3c.csvvocabulary
 	z3c.etestbrowser
 	z3c.form
-	z3c.formdemo
 	z3c.formjs
-	z3c.formjsdemo
 	z3c.formui
 	z3c.i18n
 	z3c.layer
@@ -199,14 +197,14 @@ eggs = oship
 	zope.wfmc
 	zope.xmlpickle
 eggs-directory = /home/tim/buildout-eggs
-executable = /usr/local/bin/python2.4
+executable = /home/tim/projects/bin/python
 find-links = http://pypi.python.org/simple
 recipe = zc.recipe.egg
 
 [test]
 __buildout_installed__ = /home/tim/projects/ref_impl_python/TRUNK/oship/parts/test
 	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/test
-__buildout_signature__ = zc.recipe.testrunner-1.0.0-py2.4.egg zc.recipe.egg-1.0.0-py2.4.egg setuptools-0.6c8-py2.4.egg zope.testing-3.5.1-py2.4.egg zc.buildout-1.0.0b31-py2.4.egg zc.buildout-1.0.0b31-py2.4.egg
+__buildout_signature__ = zc.recipe.testrunner-1.0.0-py2.4.egg zc.recipe.egg-1.0.0-py2.4.egg setuptools-0.6c8-py2.4.egg zope.testing-3.5.1-py2.4.egg zc.buildout-1.0.2-py2.4.egg zc.buildout-1.0.2-py2.4.egg
 _b = /home/tim/projects/ref_impl_python/TRUNK/oship/bin
 _d = /home/tim/projects/ref_impl_python/TRUNK/oship/develop-eggs
 _e = /home/tim/buildout-eggs
@@ -215,7 +213,7 @@ defaults = ['--tests-pattern', '^f?tests$', '-v']
 develop-eggs-directory = /home/tim/projects/ref_impl_python/TRUNK/oship/develop-eggs
 eggs = oship
 eggs-directory = /home/tim/buildout-eggs
-executable = /usr/local/bin/python2.4
+executable = /home/tim/projects/bin/python
 find-links = http://pypi.python.org/simple
 location = /home/tim/projects/ref_impl_python/TRUNK/oship/parts/test
 recipe = zc.recipe.testrunner
