Replaced if...elif construct in bldDefinition with dictionary comprehension and continued work on Observation archetypes.

--- a/oship/.installed.cfg
+++ b/oship/.installed.cfg
@@ -218,3 +218,12 @@ find-links = http://pypi.python.org/simple
 location = /home/tim/projects/ref_impl_python/TRUNK/oship/parts/test
 recipe = zc.recipe.testrunner
 script = /home/tim/projects/ref_impl_python/TRUNK/oship/bin/test
+
+[buildout]
+installed_develop_eggs = /home/tim/projects/ref_impl_python/TRUNK/oship/develop-eggs/oship.egg-link
+
+[buildout]
+parts = test app
+
+[buildout]
+parts = app test
