Changed the DemoAT classes so that they display the adlVersion and concept in the browser.  The workshop crew was on the right track in deducing that we will need to build widgets for all of our custom attributes.   I will be publishing information on how to proceed with this over the next few days.

--- a/oship/.installed.cfg
+++ b/oship/.installed.cfg
@@ -3,31 +3,31 @@ installed_develop_eggs =
 parts = app test
 
 [app]
-__buildout_installed__ = /home/user01/sandbox/oship/bin/oship-debug
-	/home/user01/sandbox/oship/bin/oship-ctl
-	/home/user01/sandbox/oship/bin/paster
-	/home/user01/sandbox/oship/bin/mglob
-	/home/user01/sandbox/oship/bin/mkzeoinst
-	/home/user01/sandbox/oship/bin/fstail
-	/home/user01/sandbox/oship/bin/zeopack
-	/home/user01/sandbox/oship/bin/runzeo
-	/home/user01/sandbox/oship/bin/zeopasswd
-	/home/user01/sandbox/oship/bin/zeoctl
-	/home/user01/sandbox/oship/bin/fsdump
-	/home/user01/sandbox/oship/bin/fsrefs
-	/home/user01/sandbox/oship/bin/repozo
-	/home/user01/sandbox/oship/bin/fsoids
-	/home/user01/sandbox/oship/bin/coverage
-	/home/user01/sandbox/oship/bin/coveragediff
-	/home/user01/sandbox/oship/bin/zdaemon
-	/home/user01/sandbox/oship/bin/static-apidoc
-	/home/user01/sandbox/oship/bin/i18nextract
-__buildout_signature__ = zc.recipe.egg-1.0.0-py2.5.egg setuptools-0.6c8-py2.5.egg zc.buildout-1.1.0-py2.5.egg
-_b = /home/user01/sandbox/oship/bin
-_d = /home/user01/sandbox/oship/develop-eggs
-_e = /home/user01/buildout-eggs
-bin-directory = /home/user01/sandbox/oship/bin
-develop-eggs-directory = /home/user01/sandbox/oship/develop-eggs
+__buildout_installed__ = /home/tim/projects/ref_impl_python/TRUNK/oship/bin/oship-debug
+	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/oship-ctl
+	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/paster
+	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/mglob
+	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/mkzeoinst
+	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/fstail
+	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/zeopack
+	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/runzeo
+	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/zeopasswd
+	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/zeoctl
+	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/fsdump
+	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/fsrefs
+	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/repozo
+	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/fsoids
+	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/coverage
+	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/coveragediff
+	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/zdaemon
+	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/static-apidoc
+	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/i18nextract
+__buildout_signature__ = zc.recipe.egg-1.0.0-py2.4.egg setuptools-0.6c8-py2.4.egg zc.buildout-1.0.2-py2.4.egg
+_b = /home/tim/projects/ref_impl_python/TRUNK/oship/bin
+_d = /home/tim/projects/ref_impl_python/TRUNK/oship/develop-eggs
+_e = /home/tim/buildout-eggs
+bin-directory = /home/tim/projects/ref_impl_python/TRUNK/oship/bin
+develop-eggs-directory = /home/tim/projects/ref_impl_python/TRUNK/oship/develop-eggs
 eggs = oship
 	z3c.evalexception>=2.0
 	Paste
@@ -192,34 +192,25 @@ eggs = oship
 	zope.viewlet
 	zope.wfmc
 	zope.xmlpickle
-eggs-directory = /home/user01/buildout-eggs
-executable = /home/user01/sandbox/bin/python2.5
+eggs-directory = /home/tim/buildout-eggs
+executable = /home/tim/projects/bin/python
 find-links = http://pypi.python.org/simple
 recipe = zc.recipe.egg
 
 [test]
-__buildout_installed__ = /home/user01/sandbox/oship/parts/test
-	/home/user01/sandbox/oship/bin/test
-__buildout_signature__ = zc.recipe.testrunner-1.0.0-py2.5.egg zc.recipe.egg-1.0.0-py2.5.egg setuptools-0.6c8-py2.5.egg zope.testing-3.5.1-py2.5.egg zc.buildout-1.1.0-py2.5.egg zc.buildout-1.1.0-py2.5.egg
-_b = /home/user01/sandbox/oship/bin
-_d = /home/user01/sandbox/oship/develop-eggs
-_e = /home/user01/buildout-eggs
-bin-directory = /home/user01/sandbox/oship/bin
+__buildout_installed__ = /home/tim/projects/ref_impl_python/TRUNK/oship/parts/test
+	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/test
+__buildout_signature__ = zc.recipe.testrunner-1.0.0-py2.4.egg zc.recipe.egg-1.0.0-py2.4.egg setuptools-0.6c8-py2.4.egg zope.testing-3.5.1-py2.4.egg zc.buildout-1.0.2-py2.4.egg zc.buildout-1.0.2-py2.4.egg
+_b = /home/tim/projects/ref_impl_python/TRUNK/oship/bin
+_d = /home/tim/projects/ref_impl_python/TRUNK/oship/develop-eggs
+_e = /home/tim/buildout-eggs
+bin-directory = /home/tim/projects/ref_impl_python/TRUNK/oship/bin
 defaults = ['--tests-pattern', '^f?tests$', '-v']
-develop-eggs-directory = /home/user01/sandbox/oship/develop-eggs
+develop-eggs-directory = /home/tim/projects/ref_impl_python/TRUNK/oship/develop-eggs
 eggs = oship
-eggs-directory = /home/user01/buildout-eggs
-executable = /home/user01/sandbox/bin/python2.5
+eggs-directory = /home/tim/buildout-eggs
+executable = /home/tim/projects/bin/python
 find-links = http://pypi.python.org/simple
-location = /home/user01/sandbox/oship/parts/test
+location = /home/tim/projects/ref_impl_python/TRUNK/oship/parts/test
 recipe = zc.recipe.testrunner
-script = /home/user01/sandbox/oship/bin/test
-
-[buildout]
-installed_develop_eggs = 
-
-[buildout]
-parts = test app
-
-[buildout]
-parts = app test
+script = /home/tim/projects/ref_impl_python/TRUNK/oship/bin/test
