.installed.cfg should not be in the repository.  It should be listed as an ignored file.  This may very well be part of some installation/startup problems if buildout was not re-run after a full trunk update.  This requires me to do a commit and then another commit after setting ignore.  So the next commit will not have any comments.

--- a/oship/.installed.cfg
+++ b/oship/.installed.cfg
@@ -1,35 +1,35 @@
 [buildout]
-installed_develop_eggs = 
+installed_develop_eggs = /home/tim/sandbox/ref_impl_python/TRUNK/oship/develop-eggs/oship.egg-link
 parts = app test
 
 [app]
-__buildout_installed__ = /home/tim/projects/ref_impl_python/TRUNK/oship/bin/oship-debug
-	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/oship-ctl
-	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/paster
-	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/mglob
-	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/mkzeoinst
-	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/fstail
-	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/zeopack
-	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/runzeo
-	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/zeopasswd
-	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/zeoctl
-	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/fsdump
-	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/fsrefs
-	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/repozo
-	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/fsoids
-	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/coverage
-	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/coveragediff
-	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/zdaemon
-	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/static-apidoc
-	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/i18nextract
-__buildout_signature__ = zc.recipe.egg-1.0.0-py2.4.egg setuptools-0.6c8-py2.4.egg zc.buildout-1.0.2-py2.4.egg
-_b = /home/tim/projects/ref_impl_python/TRUNK/oship/bin
-_d = /home/tim/projects/ref_impl_python/TRUNK/oship/develop-eggs
+__buildout_installed__ = /home/tim/sandbox/ref_impl_python/TRUNK/oship/bin/oship-debug
+	/home/tim/sandbox/ref_impl_python/TRUNK/oship/bin/oship-ctl
+	/home/tim/sandbox/ref_impl_python/TRUNK/oship/bin/paster
+	/home/tim/sandbox/ref_impl_python/TRUNK/oship/bin/mglob
+	/home/tim/sandbox/ref_impl_python/TRUNK/oship/bin/mkzeoinst
+	/home/tim/sandbox/ref_impl_python/TRUNK/oship/bin/fstail
+	/home/tim/sandbox/ref_impl_python/TRUNK/oship/bin/zeopack
+	/home/tim/sandbox/ref_impl_python/TRUNK/oship/bin/runzeo
+	/home/tim/sandbox/ref_impl_python/TRUNK/oship/bin/zeopasswd
+	/home/tim/sandbox/ref_impl_python/TRUNK/oship/bin/zeoctl
+	/home/tim/sandbox/ref_impl_python/TRUNK/oship/bin/fsdump
+	/home/tim/sandbox/ref_impl_python/TRUNK/oship/bin/fsrefs
+	/home/tim/sandbox/ref_impl_python/TRUNK/oship/bin/repozo
+	/home/tim/sandbox/ref_impl_python/TRUNK/oship/bin/fsoids
+	/home/tim/sandbox/ref_impl_python/TRUNK/oship/bin/coverage
+	/home/tim/sandbox/ref_impl_python/TRUNK/oship/bin/coveragediff
+	/home/tim/sandbox/ref_impl_python/TRUNK/oship/bin/zdaemon
+	/home/tim/sandbox/ref_impl_python/TRUNK/oship/bin/static-apidoc
+	/home/tim/sandbox/ref_impl_python/TRUNK/oship/bin/i18nextract
+__buildout_signature__ = zc.recipe.egg-1.1.0-py2.5.egg setuptools-0.6c8-py2.5.egg zc.buildout-1.1.1-py2.5.egg
+_b = /home/tim/sandbox/ref_impl_python/TRUNK/oship/bin
+_d = /home/tim/sandbox/ref_impl_python/TRUNK/oship/develop-eggs
 _e = /home/tim/buildout-eggs
-bin-directory = /home/tim/projects/ref_impl_python/TRUNK/oship/bin
-develop-eggs-directory = /home/tim/projects/ref_impl_python/TRUNK/oship/develop-eggs
+bin-directory = /home/tim/sandbox/ref_impl_python/TRUNK/oship/bin
+develop-eggs-directory = /home/tim/sandbox/ref_impl_python/TRUNK/oship/develop-eggs
 eggs = oship
-	z3c.evalexception>=2.0
+	z3c.evalexception
 	Paste
 	PasteScript
 	PasteDeploy
@@ -193,24 +193,24 @@ eggs = oship
 	zope.wfmc
 	zope.xmlpickle
 eggs-directory = /home/tim/buildout-eggs
-executable = /home/tim/projects/bin/python
+executable = /home/tim/sandbox/bin/python2.4
 find-links = http://pypi.python.org/simple
 recipe = zc.recipe.egg
 
 [test]
-__buildout_installed__ = /home/tim/projects/ref_impl_python/TRUNK/oship/parts/test
-	/home/tim/projects/ref_impl_python/TRUNK/oship/bin/test
-__buildout_signature__ = zc.recipe.testrunner-1.0.0-py2.4.egg zc.recipe.egg-1.0.0-py2.4.egg setuptools-0.6c8-py2.4.egg zope.testing-3.5.1-py2.4.egg zc.buildout-1.0.2-py2.4.egg zc.buildout-1.0.2-py2.4.egg
-_b = /home/tim/projects/ref_impl_python/TRUNK/oship/bin
-_d = /home/tim/projects/ref_impl_python/TRUNK/oship/develop-eggs
+__buildout_installed__ = /home/tim/sandbox/ref_impl_python/TRUNK/oship/parts/test
+	/home/tim/sandbox/ref_impl_python/TRUNK/oship/bin/test
+__buildout_signature__ = zc.recipe.testrunner-1.0.0-py2.5.egg zc.recipe.egg-1.1.0-py2.5.egg setuptools-0.6c8-py2.5.egg zope.testing-3.6.0-py2.5.egg zc.buildout-1.1.1-py2.5.egg zc.buildout-1.1.1-py2.5.egg zope.interface-3.4.1-py2.5-linux-x86_64.egg
+_b = /home/tim/sandbox/ref_impl_python/TRUNK/oship/bin
+_d = /home/tim/sandbox/ref_impl_python/TRUNK/oship/develop-eggs
 _e = /home/tim/buildout-eggs
-bin-directory = /home/tim/projects/ref_impl_python/TRUNK/oship/bin
+bin-directory = /home/tim/sandbox/ref_impl_python/TRUNK/oship/bin
 defaults = ['--tests-pattern', '^f?tests$', '-v']
-develop-eggs-directory = /home/tim/projects/ref_impl_python/TRUNK/oship/develop-eggs
+develop-eggs-directory = /home/tim/sandbox/ref_impl_python/TRUNK/oship/develop-eggs
 eggs = oship
 eggs-directory = /home/tim/buildout-eggs
-executable = /home/tim/projects/bin/python
+executable = /home/tim/sandbox/bin/python2.4
 find-links = http://pypi.python.org/simple
-location = /home/tim/projects/ref_impl_python/TRUNK/oship/parts/test
+location = /home/tim/sandbox/ref_impl_python/TRUNK/oship/parts/test
 recipe = zc.recipe.testrunner
-script = /home/tim/projects/ref_impl_python/TRUNK/oship/bin/test
+script = /home/tim/sandbox/ref_impl_python/TRUNK/oship/bin/test
