--- a/oship/.bzrignore
+++ b/oship/.bzrignore
@@ -7,6 +7,7 @@ oship/bin
 oship/develop-eggs
 oship/etc
 oship/parts
+oship/parts/log/Z3.log
 oship/pyfile_build.log
 oship/bin/buildout
 oship/bin/i18nextract
