Updated buildout.cfg for shared eggs directory on Windows.

--- a/oship/buildout.cfg
+++ b/oship/buildout.cfg
@@ -7,6 +7,8 @@ extends = versions.cfg
 # eggs will be installed in the default buildout location
 # (see .buildout/default.cfg in your home directory)
 # unless you specify an eggs-directory option here.
+# Windows users should create the directory and then uncomment the line below:
+#eggs-directory = C:\shared-eggs
 
 versions = versions
 
